--- a/gtk-3.0/widgets/_treeviews.scss
+++ b/gtk-3.0/widgets/_treeviews.scss
@@ -84,8 +84,7 @@ treeview.view {
   }
 
   &.progressbar { // progress bar in treeviews
-    @if $variant == light { color: $base_color; }
-
+    color: $selected_fg_color;
     border: 1px solid $selected_borders_color;
     border-radius: 4px;
     background-color: $selected_bg_color;
@@ -100,13 +99,8 @@ treeview.view {
     &:selected {
       &:focus, & {
         border-radius: 4px;
-
-        @if $variant == 'light' {
-          color: $selected_bg_color;
-          box-shadow: none;
-        }
-
-        @else { box-shadow: inset 0 1px transparentize(white, 0.95); }
+        color: $selected_bg_color;
+        box-shadow: inset 0 1px transparentize(white, 0.95);
 
         background-image: linear-gradient(to bottom,
                                           $base_color,
